--- a/hexoblog/css/main.css
+++ b/hexoblog/css/main.css
@@ -1148,7 +1148,7 @@ body {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #ff4aa6;
+  background: #1dfb9e;
 }
 .sidebar-nav {
   margin: 0;
